--- a/MVC/04-AspNetCore.FileProvider/AspNetCore.ChangeToToken/Pages/Shared/_Layout.cshtml
+++ b/MVC/04-AspNetCore.FileProvider/AspNetCore.ChangeToToken/Pages/Shared/_Layout.cshtml
@@ -4,47 +4,257 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - AspNetCore.ChangeToToken</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <style>
+        body {
+            margin: 0;
+            padding-bottom: 20px;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-size: 14px;
+            line-height: 1.42857143;
+            color: #333;
+            background-color: #fff;
+        }
+
+        h1 {
+            font-size: 24px;
+            margin: .67em 0;
+        }
+
+        pre {
+            overflow: auto;
+        }
+
+        code, pre {
+            font-family: monospace, monospace;
+            font-size: 1em;
+        }
+
+        button, input {
+            margin: 0;
+            font: inherit;
+            color: inherit;
+        }
+
+        button {
+            overflow: visible;
+        }
+
+        button {
+            text-transform: none;
+        }
+
+        input {
+            line-height: normal;
+        }
+
+        {
+            box-sizing: border-box;
+        }
+
+        :before, *:after {
+            box-sizing: border-box;
+        }
+
+        input, button {
+            font-family: inherit;
+            font-size: inherit;
+            line-height: inherit;
+        }
+
+        a {
+            color: #337ab7;
+            text-decoration: none;
+        }
+
+        h1, h2, h3, h4 {
+            font-family: inherit;
+            font-weight: 500;
+            line-height: 1.1;
+            color: inherit;
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+
+        h3 {
+            font-size: 16px;
+        }
+
+        h4 {
+            font-size: 18px;
+        }
+
+        p {
+            margin: 0 0 10px;
+        }
+
+        ol {
+            margin-top: 0;
+            margin-bottom: 10px;
+        }
+
+        code, pre {
+            font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+        }
+
+        code {
+            padding: 2px 4px;
+            font-size: 90%;
+            color: #c7254e;
+            background-color: #f9f2f4;
+            border-radius: 4px;
+        }
+
+        pre {
+            display: block;
+            padding: 9.5px;
+            margin: 0 0 10px;
+            font-size: 13px;
+            line-height: 1.42857143;
+            color: #333;
+            word-break: break-all;
+            word-wrap: break-word;
+            background-color: #f5f5f5;
+            border: 1px solid #ccc;
+            -radius: 4px;
+        }
+
+            pre code {
+                padding: 0;
+                font-size: inherit;
+                color: inherit;
+                white-space: pre-wrap;
+                background-color: transparent;
+                border-radius: 0;
+            }
+
+        .container {
+            padding-right: 15px;
+            padding-left: 15px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+        .container {
+            width: 800px;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 6px 12px;
+            margin: 0 0 0 10px;
+            font-size: 14px;
+            font-weight: normal;
+            line-height: 1.42857143;
+            text-align: center;
+            white-space: nowrap;
+            vertical-align: middle;
+            background-image: none;
+            border: 1px solid transparent;
+            border-radius: 4px;
+            ;
+            color: #fff;
+            background-color: green;
+            border-color: gray;
+            float: right
+        }
+
+        .panel {
+            margin-bottom: 20px;
+            background-color: #fff;
+            border: 1px solid transparent;
+            border-radius: 4px;
+            box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+        }
+
+        .panel-body {
+            padding: 15px;
+        }
+
+        .panel-heading {
+            padding: 10px 15px;
+            border-bottom: 1px solid transparent;
+            border-top-left-radius: 3px;
+            border-top-right-radius: 3px;
+        }
+
+        .panel-title {
+            margin-top: 0;
+            margin-bottom: 0;
+            font-size: 16px;
+            color: inherit;
+        }
+
+        .panel-default {
+            border-color: #ddd;
+        }
+
+            .panel-default > .panel-heading {
+                color: #333;
+                background-color: #f5f5f5;
+                border-color: #ddd;
+            }
+
+        .clearfix:before, .clearfix:after, .container:before, .container:after, .panel-body:before, .panel-body:after {
+            display: table;
+            content: " ";
+        }
+
+        .clearfix:after, .container:after, .panel-body:after {
+            clear: both;
+        }
+
+        .body-content {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+
+        .panel-body {
+            font-size: 16px;
+        }
+
+        .label {
+            border: 1px solid black;
+            border-radius: 3px;
+            padding: 2px
+        }
+
+        .label-default {
+            color: black;
+            background-color: lightgray
+        }
+
+        .label-success, .btn-success {
+            color: black;
+            background-color: lime
+        }
+
+        .label-info {
+            color: black;
+            background-color: tan
+        }
+
+        .label-warning {
+            color: black;
+            background-color: yellow
+        }
+
+        .label-primary {
+            color: black;
+            background-color: orange
+        }
+
+        .label-danger, .btn-danger {
+            color: black;
+            background-color: red
+        }
+
+        li {
+            margin: 2px 0
+        }</style>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">AspNetCore.ChangeToToken</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div class="container body-content">
+        @RenderBody()
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - AspNetCore.ChangeToToken - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
-    </footer>
-
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
-    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
