ASP.NET Core Identity 系列之四

--- a/AspNetCore.Identity/Identity/Views/Home/Index.cshtml
+++ b/AspNetCore.Identity/Identity/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @if (User?.Identity?.IsAuthenticated ?? false)
+    {
+        @Model <a asp-controller="Account" asp-action="Logout" class="btn btn-danger">Logout</a>
+    }
 </div>
