--- a/AspNetCore.Identity/Identity/Views/Account/Login.cshtml
+++ b/AspNetCore.Identity/Identity/Views/Account/Login.cshtml
@@ -1,15 +1,9 @@
-﻿@model User
+﻿@model Login
 @{
-    ViewData["Title"] = "新增用户";
+    ViewData["Title"] = "Login";
 }
-<div asp-validation-summary="All" class="text-danger"></div>
+<div class="text-danger" asp-validation-summary="All"></div>
 <form class="form-horizontal" role="form" method="post">
-    <div class="mb-3 row">
-        <label asp-for="Name" class="col-sm-1 control-label"></label>
-        <div class="col-sm-11">
-            <input asp-for="Name" class="form-control" />
-        </div>
-    </div>
     <div class="mb-3 row">
         <label asp-for="Email" class="col-sm-1 control-label"></label>
         <div class="col-sm-11">
@@ -23,11 +17,14 @@
         </div>
     </div>
     <div class="mb-3 row">
+        <label asp-for="RememberMe" class="col-sm-1 control-label"></label>
+        <div class="col-sm-11">
+            <input type="checkbox" asp-for="RememberMe" />
+        </div>
+    </div>
+    <div class="mb-3 row">
         <div class="col-sm-11 offset-sm-1">
-            <button type="submit" class="btn btn-primary">保存</button>
-            <button asp-action="Index" class="btn btn-secondary">
-                返回
-            </button>
+            <button type="submit" class="btn btn-primary">登录</button>
         </div>
     </div>
 </form>
