--- a/AspNetCore.Identity/Identity/Views/Admin/Index.cshtml
+++ b/AspNetCore.Identity/Identity/Views/Admin/Index.cshtml
@@ -19,8 +19,11 @@
                         <th>编号</th>
                         <th>名称</th>
                         <th>邮件</th>
+                        <td>年龄</td>
+                        <td>国家</td>
+                        <td>薪水</td>
                         <th>编辑</th>
-                        <th>删除</th>
+                        <td>删除</td>
                     </tr>
                 </thead>
                 <tbody>
@@ -30,6 +33,9 @@
                             <td>@user.Id</td>
                             <td>@user.UserName</td>
                             <td>@user.Email</td>
+                            <td>@user.Age</td>
+                            <td>@user.Country</td>
+                            <td>@user.Salary</td>
                             <td>
                                 <a class="btn btn-primary btn-sm" asp-action="Update" asp-route-id="@user.Id">编辑</a>
                             </td>
@@ -45,3 +51,4 @@
         </div>
     </div>
 </div>
+
