--- a/AspNetCore.Identity/Identity/Views/Admin/Update.cshtml
+++ b/AspNetCore.Identity/Identity/Views/Admin/Update.cshtml
@@ -28,6 +28,26 @@
             <input asp-for="Password" class="form-control" />
         </div>
     </div>
+     <div class="mb-3 row">
+        <label asp-for="Age" class="col-sm-1 control-label"></label>
+        <div class="col-sm-11">
+            <input asp-for="Age" class="form-control" />
+        </div>
+    </div>
+    <div class="mb-3 row">
+        <label asp-for="Country" class="col-sm-1 control-label"></label>
+        <div class="col-sm-11">
+            <select asp-for="Country" class="form-control" asp-items="@new SelectList(Enum.GetNames(typeof(Country)))">
+                <option selected disabled value="选择">选择国家</option>
+            </select>
+        </div>
+    </div>
+    <div class="mb-3 row">
+        <label asp-for="Salary" class="col-sm-1 control-label"></label>
+        <div class="col-sm-11">
+            <input asp-for="Salary" class="form-control" />
+        </div>
+    </div>
     <div class="row mb-3">
         <div class="col-sm-11 offset-sm-1">
             <button class="btn btn-primary">保存</button>
