ASP.NET Core Identity系列之十一密码重置

--- a/AspNetCore.Identity/Identity/Views/Account/Login.cshtml
+++ b/AspNetCore.Identity/Identity/Views/Account/Login.cshtml
@@ -25,6 +25,9 @@
     <div class="mb-3 row">
         <div class="col-sm-11 offset-sm-1">
             <button type="submit" class="btn btn-primary">登录</button>
+            <button asp-action="ForgotPassword" class="btn btn-secondary">
+                重置密码
+            </button>
         </div>
     </div>
 </form>
