--- a/EntityFrameworkCore/EFCoreUpdateRecords/Views/Employee/Index.cshtml
+++ b/EntityFrameworkCore/EFCoreUpdateRecords/Views/Employee/Index.cshtml
@@ -21,6 +21,7 @@
                         <th>职务</th>
                         <th>部门</th>
                         <th>修改</th>
+                        <td>删除</td>
                     </tr>
                 </thead>
                 <tbody>
@@ -35,6 +36,13 @@
                                 <a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@emp.DepartmentId">
                                     修改
                                 </a>
+                            </td>
+                            <td>
+                                <form asp-action="Delete" asp-route-id="@emp.Id" method="post">
+                                    <button type="submit" class="btn btn-sm btn-danger">
+                                        删除
+                                    </button>
+                                </form>
                             </td>
                         </tr>
                     }
