ASP.NET Core View

--- a/Fundamentals/AspNetCore.Views/AspNetCore.Views/Views/City/Tokyo.cshtml
+++ b/Fundamentals/AspNetCore.Views/AspNetCore.Views/Views/City/Tokyo.cshtml
@@ -1,4 +1,7 @@
-﻿<h1>Welcome to Tokyo</h1>
+﻿@{
+    Layout = null;
+}
+<h1>Welcome to Tokyo</h1>
 <form asp-controller="City" asp-action="Tokyo" method="post">
     <div class="mb-3 row">
         <label class="col-sm-1 control-label">名称</label>
