AspNet Core Generate Link

--- a/Fundamentals/AspNetCore.Route/AspNetCore.RouteLinks/Views/Home/Index.cshtml
+++ b/Fundamentals/AspNetCore.Route/AspNetCore.RouteLinks/Views/Home/Index.cshtml
@@ -29,6 +29,11 @@
     <p>
         @Url.Action("List", "Product", new { id = 10 })
     </p>
+    <p>
+        <a asp-controller="Product" asp-action="List" asp-fragment="Printing">
+            URL Fragment
+        </a>
+    </p>
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
