--- a/Fundamentals/AspNetCore.TagHelpers/AspNetCore.TagHelpers/Views/Home/Index.cshtml
+++ b/Fundamentals/AspNetCore.TagHelpers/AspNetCore.TagHelpers/Views/Home/Index.cshtml
@@ -1,8 +1,26 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model IEnumerable<Product>
+@*<table class="table table-sm table-bordered">
+    <thead class="bg-dark text-white">
+        <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Quantity</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var product in Model)
+        {
+            <tr>
+                <td>@product.Name</td>
+                <td>@product.Price</td>
+                <td>@product.Quantity</td>
+            </tr>
+        }
+    </tbody>
+</table>*@
+<MyTable Products="@Model"></MyTable>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
