--- a/Fundamentals/AspNetCore.TagHelpers/AspNetCore.BuiltInTagHelpers/Views/Home/Create.cshtml
+++ b/Fundamentals/AspNetCore.TagHelpers/AspNetCore.BuiltInTagHelpers/Views/Home/Create.cshtml
@@ -18,10 +18,23 @@
     <div class="mb-3 row">
         <label class="col-sm-1 control-label" asp-for="Quantity"></label>
         <div class="col-sm-11">
-            <input class="form-control" asp-for="Quantity" />
+            @*<input class="form-control" asp-for="Quantity" />*@
+            @* <select class="form-control" asp-for="Quantity">
+            <option disabled selected value="">Select Quantity</option>
+            <option>50</option>
+            <option>100</option>
+            <option>150</option>
+            <option>200</option>
+            <option>300</option>
+            <option>400</option>
+            </select>*@
+            <select class="form-control" asp-for="Quantity" asp-items="ViewBag.Quantity">
+                <option disabled selected value="">Select Quantity</option>
+            </select>
         </div>
     </div>
     <div class="col-sm-11 offset-sm-1">
         <button type="submit" class="btn btn-primary">新增</button>
+        <a class="btn btn-default" href="/Home/Index">取消</a>
     </div>
 </form>
