--- a/Fundamentals/AspNetCore.TagHelpers/AspNetCore.BuiltInTagHelpers/Views/Shared/_Layout.cshtml
+++ b/Fundamentals/AspNetCore.TagHelpers/AspNetCore.BuiltInTagHelpers/Views/Shared/_Layout.cshtml
@@ -4,9 +4,51 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - AspNetCore.BuiltInTagHelpers</title>
+    
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/AspNetCore.BuiltInTagHelpers.styles.css" asp-append-version="true" />
+    
+    @*7.1 asp-src-include例子  *@
+
+    @*<link rel="stylesheet" asp-href-include="/lib/bootstrap/**/*.js" />
+    <script asp-src-include="lib/bootstrap/**/*bundle.js"></script>*@
+
+    @*7.2 asp-src-exclude例子 *@
+
+    @* <script asp-src-include="/lib/bootstrap/**/b*.js"
+    asp-src-exclude="**.slim.*,**.min.*,**.bundle.*"></script>
+    *@
+
+    @*7.3 Busting asp-fragment Attribute*@
+
+    @*  <script asp-src-include="/lib/bootstrap/**/b*.js"
+    asp-src-exclude="**.slim.*,**.min.*,**.bundle.*"
+    asp-append-version="true">
+    </script>*@
+
+    @*8 CDN帮助标签 *@
+  @*  <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"
+            asp-fallback-src-include="/lib/jquery/**/*.min.js"
+            asp-fallback-src-exclude="**.slim.**"
+            asp-fallback-test="window.jQuery">
+    </script>
+*@
+    @*9.1 asp-href-include例子*@
+   @* <link rel="stylesheet" asp-href-include="/lib/bootstrap/**/*min.css" />*@
+
+    @*9.2 asp-href-include例子*@
+
+    @*<link rel="stylesheet"
+          asp-href-include="/lib/bootstrap/**/*min.css"
+          asp-href-exclude="**/*reboot*,**/*grid*,**/*rtl*,**/*utilities*" />*@
+
+    @* 10 从CDN加载CSS*@
+   @* <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          asp-fallback-href-include="/lib/bootstrap/**/*.min.css"
+          asp-fallback-href-exclude="**/*reboot*,**/*grid*"
+          asp-fallback-test-class="btn" asp-fallback-test-property="display"
+          asp-fallback-test-value="inline-block" rel="stylesheet" />*@
+
+
 </head>
 <body>
     <header>
@@ -32,6 +74,14 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <div class="bg-info text-warning">
+                @* expires-after="@TimeSpan.FromSeconds(20)" 20秒之后缓存将失效 *@
+                @* expires-on="@DateTime.Parse("2050-01-01")" 直到2025年过期 *@
+                @*expires-sliding="@TimeSpan.FromSeconds(20)" 这个缓存将在距离上次使用的20s后过期 *@
+                <cache expires-sliding="@TimeSpan.FromSeconds(20)" vary-by="@ViewContext.RouteData.Values["action"]">
+                    Date Time: @DateTime.Now.ToString("HH:mm:ss")
+                </cache>
+            </div>
             @RenderBody()
         </main>
     </div>
