--- a/Fundamentals/AspNetCore.TagHelpers/AspNetCore.CustomTagHelpers/Views/_ViewImports.cshtml
+++ b/Fundamentals/AspNetCore.TagHelpers/AspNetCore.CustomTagHelpers/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AspNetCore.CustomTagHelpers
 @using AspNetCore.CustomTagHelpers.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper AspNetCore.CustomTagHelpers.CustomTagHelpers.*,AspNetCore.CustomTagHelpers
