ASP.NET Core Customer Tag Helper

--- a/Fundamentals/AspNetCore.TagHelpers/AspNetCore.CustomTagHelpers/Views/Shared/_Layout.cshtml
+++ b/Fundamentals/AspNetCore.TagHelpers/AspNetCore.CustomTagHelpers/Views/Shared/_Layout.cshtml
@@ -30,7 +30,10 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div action-name="Index" class="bg-danger">
+        <h2>Hello</h2>
+    </div>
+    <div pre-post="Tag Helpers">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
