--- a/Fundamentals/AspNetCore.ModelBinding/AspNetCore.ModelBinding.Advanced/Views/Home/Body.cshtml
+++ b/Fundamentals/AspNetCore.ModelBinding/AspNetCore.ModelBinding.Advanced/Views/Home/Body.cshtml
@@ -1,21 +1,20 @@
 ﻿@{
-    ViewData["Title"] = "FromFormExample";
+    ViewData["Title"] = "FromBody";
 }
-<h2>@ViewBag.Message</h2>
 @section scripts
     {
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <script>
         $(document).ready(function () {
             $("button").click(function (e) {
-                data = new FormData();
-                data.append("id", 5);
-                data.append("name", "Donald Trump");
-                $.ajax("/Home/FromFormExample", {
+                $.ajax("/Home/Body", {
                     method: "post",
                     processData: false,
-                    contentType: false,
-                    data: data,
+                    contentType: "application/json",
+                    data: JSON.stringify({
+                        id: 5,
+                        name: "Donald Trump"
+                    }),
                     success: function (data) {
                         $("#empId").text(data.id);
                         $("#empName").text(data.name);
@@ -31,15 +30,3 @@
     <tr><th>Name:</th><td id="empName"></td></tr>
 </table>
 <button class="btn btn-primary">提交</button>
-@*<form method="post">
-    <div class="form-group">
-        <label>Id</label>
-        <input name="id" class="form-control"/>
-    </div>
-    <div class="form-group">
-        <label>Name:</label>
-        <input name="name" class="form-control" />
-    </div>
-    <button class="btn btn-primary">提交</button>
-</form>
-*@
