ASP.NET Core XSRF 防伪Token

--- a/Fundamentals/AspNetCore.Security/AspNetCore.XSRF/Views/Home/Index.cshtml
+++ b/Fundamentals/AspNetCore.Security/AspNetCore.XSRF/Views/Home/Index.cshtml
@@ -10,3 +10,10 @@
 <form method="post">
     <!-- ... -->
 </form>
+<!-- ... -->
+<form method="post" asp-antiforgery="false">
+    <!-- ... -->
+</form>
+<!form method="post">
+<!-- ... -->
+</!form>
