ASP.NET Core HttpRequest

--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpRequest/Pages/Consumption/Index.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpRequest/Pages/Consumption/Index.cshtml
@@ -6,5 +6,5 @@
 <ul>
     <li><a asp-page="./Basic">Basic usage</a></li>
     <li><a asp-page="./NamedClients">Named Client</a></li>
-    <li><a asp-page="./TypedClient">Typed Client</a>></li>
+    <li><a asp-page="./TypedClient">Typed Client</a></li>
 </ul>
