--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpRequest/Pages/Consumption/NamedClients.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpRequest/Pages/Consumption/NamedClients.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Consumption-NamedClients";
 }
-<h1>Consumption patterns - Basic usage</h1>
+<h1>Consumption patterns - NamedClients</h1>
 
 @await Component.InvokeAsync("GitHubBranches",
     new 
