AspNet Core HttpClient

--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/BasicUsage.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/BasicUsage.cshtml
@@ -1,18 +1,20 @@
 ﻿@namespace AspNetCore.HttpClient.GitHub
 @model BasicUsageModel
 @{
-    ViewData["Title"]= "Branches for Docs Repo";
+    ViewData["Title"] = "Branches for Docs Repo";
 }
 <h1>@ViewData["Title"]</h1>
 
 @if (Model.GetBranchesError)
 {
-<p>Unable to get branches from GitHub. Please try again later.</p>
+    <p>Unable to get branches from GitHub. Please try again later.</p>
+    <p>Unable to get branches from GitHub. Please try again later.</p>
 }
-else{
+else
+{
     <ul>
         @foreach (var branch in Model.Branches)
-        { 
+        {
             <li>@branch.Name</li>
         }
     </ul>
