--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/Index.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 <p><a asp-action="BasicUsage">Basic usage of HttpClientFactory directly.</a></p>
-<p><a asp-action="NamedClient">Use a named client.</a></p>
-<p><a asp-action="TypedClient">Use a typed client.</a></p>
-<p><a asp-action="TypedClient2">Use a typed client2.</a></p>
- @*<p><a asp-page="/UnreliableEndpointConsumer">Use a Polly WaitAndRetry handler.</a></p>*@
+<p><a asp-action="NamedClient">Use a named client of HttpClientFactory directly.</a></p>
+<p><a asp-action="TypedClient">Use a typed client of HttpClientFactory directly.</a></p>
+<p><a asp-action="RefitClient">Use a RefitClient of HttpClientFactory directly.</a></p>
+@*<p><a asp-page="/UnreliableEndpointConsumer">Use a Polly WaitAndRetry handler.</a></p>*@
 
