AspNet Core HttpClient

--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/RefitClient.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/RefitClient.cshtml
@@ -1,5 +1,4 @@
-﻿@namespace AspNetCore.HttpClient.GitHub
-@model IEnumerable<GitHubBranch>
+﻿@model IEnumerable<GitHubBranch>
 @{
     ViewData["Title"] = "Branches for Docs Repo";
 }
