--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/TypedClient.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/TypedClient.cshtml
@@ -1,5 +1,4 @@
-﻿@namespace AspNetCore.HttpClient.GitHub
-@model TypeClientModel
+﻿@model TypeClientModel
 @{
     ViewData["Title"] = "Latest GitHub Issues for ASP.NET Docs";
 }
