--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/BasicUsage.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/BasicUsage.cshtml
@@ -1,5 +1,4 @@
-﻿@namespace AspNetCore.HttpClient.GitHub
-@model BasicUsageModel
+﻿@model BasicUsageModel
 @{
     ViewData["Title"] = "Branches for Docs Repo";
 }
