--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/NamedClient.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClient/Views/Home/NamedClient.cshtml
@@ -1,8 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@namespace AspNetCore.HttpClient.GitHub
-@model NamedClientModel
+﻿@model NamedClientModel
 @{ ViewData["Title"] = "Pull Requests for Docs Repo"; }
 
 <h1>@ViewData["Title"]</h1>
