AspNet Core HttpClient Verb

--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClientWithHttpVerb/Views/Home/Edit.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClientWithHttpVerb/Views/Home/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Edit Item";
 }
-@namespace AspNetCore.UsingHttpVerb.Practice.Models
+@using AspNetCore.HttpClientWithHttpVerb.Models
 @model TodoItem
 
 <h1>@ViewData["Title"]</h1>
