--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClientWithHttpVerb/Views/Home/Index.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClientWithHttpVerb/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-@using AspNetCore.UsingHttpVerb.Practice.Models
+@using AspNetCore.HttpClientWithHttpVerb.Models
 @model IndexModel
 <div class="row justify-content-center">
     <div class="col-md-6">
