--- a/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClientWithHttpVerb/Views/Home/Operation.cshtml
+++ b/Fundamentals/AspNetCore.HttpRequest/AspNetCore.HttpClientWithHttpVerb/Views/Home/Operation.cshtml
@@ -1,4 +1,4 @@
-﻿@namespace AspNetCore.UsingHttpVerb.Practice.Models
+﻿@using AspNetCore.HttpClientWithHttpVerb.Models
 @model OperationModel
 @{
     ViewData["Title"] = "Operation";
