ASP.NET Core Options

--- a/Fundamentals/AspNetCore.Options/AspNetCore.OptionsPattern/Views/Shared/_Layout.cshtml
+++ b/Fundamentals/AspNetCore.Options/AspNetCore.OptionsPattern/Views/Shared/_Layout.cshtml
@@ -23,7 +23,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Bind">Bind方法</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="GetOfT">GetOfT方法</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="IOptionsInterface" asp-action="Index">IOptionsInterface接口</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="IOptionsMonitorInterface" asp-action="Index">IOptionsMonitor接口</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="IOptionsSnapshotInterface" asp-action="Index">IOptionsSnapshot接口</a>
                         </li>
                     </ul>
                 </div>
