--- a/Fundamentals/AspNetCore.Options/AspNetCore.OptionsPattern/Views/Shared/_Layout.cshtml
+++ b/Fundamentals/AspNetCore.Options/AspNetCore.OptionsPattern/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="IOptionsSnapshotInterface" asp-action="Index">IOptionsSnapshot接口</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="OptionsValidation" asp-action="Index">Options验证</a>
+                        </li>
                     </ul>
                 </div>
             </div>
