--- a/src/01-Basics/Identity/Views/Admin/Index.cshtml
+++ b/src/01-Basics/Identity/Views/Admin/Index.cshtml
@@ -3,27 +3,24 @@
     ViewData["Title"] = "用户列表";
 }
 <div class="container">
-    <div class="row mb-3">
-        <div class="col-sm-3">
-            <a asp-action="Create" class="btn btn-primary">新增</a>
+    <div class="row mb-4">
+        <div class="col text-end">
+            <a asp-action="Create" class="btn btn-success"><i class="fas fa-plus"></i>新增角色</a>
         </div>
-        <div class="col-sm-3"></div>
-        <div class="col-sm-3"></div>
-        <div class="col-sm-3"></div>
     </div>
-    <div class="row mb-3">
-        <div class="col-sm">
-            <table class="table table-bordered align-middle">
-                <thead>
+    <div class="row">
+        <div class="col">
+            <table class="table table-striped table-hover table-bordered align-middle">
+                <thead class="table-dark">
                     <tr>
-                        <th>编号</th>
-                        <th>名称</th>
-                        <th>邮件</th>
-                        <td>年龄</td>
-                        <td>国家</td>
-                        <td>薪水</td>
-                        <th>编辑</th>
-                        <td>删除</td>
+                        <th scope="col">编号</th>
+                        <th scope="col">名称</th>
+                        <th scope="col">邮件</th>
+                        <th scope="col">年龄</th>
+                        <th scope="col">国家</th>
+                        <th scope="col">薪水</th>
+                        <th scope="col">操作</th>
+                        <th scope="col">删除</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -37,11 +34,16 @@
                             <td>@user.Country</td>
                             <td>@user.Salary</td>
                             <td>
-                                <a class="btn btn-primary btn-sm" asp-action="Update" asp-route-id="@user.Id">编辑</a>
+                                <a class="btn btn-sm btn-warning" asp-action="Update" asp-route-id="@user.Id">
+                                    <i class="fas fa-edit"></i> 编辑
+                                </a>
                             </td>
                             <td>
-                                <form method="post" asp-action="Delete" asp-route-id="@user.Id" role="form">
-                                    <button type="submit" class="btn btn-danger btn-sm">删除</button>
+                                <form method="post" asp-action="Delete" asp-route-id="@user.Id" role="form"
+                                          onsubmit="return confirm('确定要删除该用户吗？');">
+                                        <button type="submit" class="btn btn-sm btn-danger">
+                                            <i class="fas fa-trash"></i> 删除
+                                        </button>
                                 </form>
                             </td>
                         </tr>
@@ -51,4 +53,5 @@
         </div>
     </div>
 </div>
-
+<!-- 引入 FontAwesome 图标支持 -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
