--- a/src/01-Basics/Identity/Views/Role/Index.cshtml
+++ b/src/01-Basics/Identity/Views/Role/Index.cshtml
@@ -1,49 +1,55 @@
 ﻿@using Microsoft.AspNetCore.Identity;
-@model IEnumerable<IdentityRole>
+@model IEnumerable<Role>
+
 @{
     ViewData["Title"] = "Roles";
 }
-<div class="container">
-    <div class="row mb-3">
-        <div class="col-sm-3">
-            <a asp-action="Create" class="btn btn-primary">新增</a>
+
+<div class="container mt-4">
+    <div class="row mb-4">
+        <div class="col-sm-12 text-end">
+            <a asp-action="Create" class="btn btn-success shadow-sm">
+                <i class="fas fa-plus"></i> 新增角色
+            </a>
         </div>
-        <div class="col-sm-3"></div>
-        <div class="col-sm-3"></div>
-        <div class="col-sm-3"></div>
     </div>
-    <div class="row mb-3">
-        <div class="col-sm">
-            <table class="table-content-center table table-bordered">
-                <thead>
-                    <tr>
-                        <th>编号</th>
-                        <th>角色名称</th>
-                        <td>用户</td>
-                        <th>编辑</th>
-                        <td>删除</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var role in Model)
-                    {
+        <div class="card-body">
+            <div class="table-responsive">
+                 <table class="table table-striped table-hover table-bordered align-middle">
+                    <thead class="table-dark">
                         <tr>
-                            <td>@role.Id</td>
-                            <td>@role.Name</td>
-                            <td i-role="@role.Id"></td>
-                            <td>
-                                <a class="btn btn-primary btn-sm" asp-action="Update" asp-route-id="@role.Id">编辑</a>
-                            </td>
-                            <td>
-                                <form method="post" asp-action="Delete" asp-route-id="@role.Id" role="form">
-                                    <button type="submit" class="btn btn-danger btn-sm">删除</button>
-                                </form>
-                            </td>
+                            <th>编号</th>
+                            <th>角色名称</th>
+                            <th style="width: 100px;">编辑</th>
+                            <th style="width: 100px;">删除</th>
                         </tr>
-                    }
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        @foreach (var role in Model)
+                        {
+                            <tr>
+                                <td>@role.Id</td>
+                                <td>@role.Name</td>
+                                <td style="width: 100px;">
+                                    <a class="btn btn-sm btn-warning" asp-action="Update" asp-route-id="@role.Id">
+                                        <i class="fas fa-edit"></i> 编辑
+                                    </a>
+                                </td>
+                                <td style="width: 100px;">
+                                    <form method="post" asp-action="Delete" asp-route-id="@role.Id" onsubmit="return confirm('确定要删除该角色吗？');">
+                                        <button type="submit" class="btn btn-sm btn-danger">
+                                            <i class="fas fa-trash"></i> 删除
+                                        </button>
+                                    </form>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
 
+<!-- 引入 FontAwesome 图标支持 -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
